--- a/develop/turn-howto.html
+++ b/develop/turn-howto.html
@@ -421,7 +421,7 @@ negotiation. On Firefox, check the &quot;Connection Log&quot; on <code>about:web
 <p>(Understanding the output is beyond the scope of this document!)</p>
 </li>
 <li>
-<p>You can test your Matrix homeserver TURN setup with https://test.voip.librepush.net/.
+<p>You can test your Matrix homeserver TURN setup with <a href="https://test.voip.librepush.net/">https://test.voip.librepush.net/</a>.
 Note that this test is not fully reliable yet, so don't be discouraged if
 the test fails.
 <a href="https://github.com/matrix-org/voip-tester">Here</a> is the github repo of the
@@ -429,7 +429,7 @@ source of the tester, where you can file bug reports.</p>
 </li>
 <li>
 <p>There is a WebRTC test tool at
-https://webrtc.github.io/samples/src/content/peerconnection/trickle-ice/. To
+<a href="https://webrtc.github.io/samples/src/content/peerconnection/trickle-ice/">https://webrtc.github.io/samples/src/content/peerconnection/trickle-ice/</a>. To
 use it, you will need a username/password for your TURN server. You can
 either:</p>
 <ul>
